# PassChecker

./: README.md  gradle.properties
app/: build.gradle
app/src/androidTest/java/tk/leoforney/passchecker/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/friesw/mjpegstreamer/: JpegImageSource.java  MjpegStreamer.java  Source.java
app/src/main/java/com/serenegiant/usbcameratest/: CameraActivity.java
app/src/main/java/com/serenegiant/widget/: AspectRatioViewInterface.java
app/src/main/java/me/aflak/ezcam/: EZCam.java
app/src/main/java/tk/leoforney/passchecker/: AutoFitTextureView.java  CameraFragment.java  Car.java  CredentialsManager.java  DatabaseResponse.java  FileUploader.java  ImageChecker.java  LoginActivity.java  MainActivity.java  MyAppGlideModule.java  PassListFragment.java  PassRVAdapter.java  PassType.java  Person.java  PlateFailedAdapter.java  Preview.java  QRScannerActivity.java  SemesterUtil.java  ServerListener.java  ServerProperties.java  Student.java  ThemeColors.java  USBCameraActivity.java  User.java
app/src/main/java/tk/leoforney/passchecker/dummy/: DummyContent.java
app/src/main/java/tk/leoforney/passchecker/student/: CarViewHolder.java  FilterHelper.java  StudentListAdapter.java  StudentViewHolder.java
app/src/main/res/drawable/: side_nav_bar.xml
app/src/main/res/drawable-anydpi/: ic_usb_camera.xml
app/src/main/res/layout/: activity_camera.xml  activity_login.xml  activity_main.xml  activity_usbcamera.xml  app_bar_main.xml  camera_student_failed_result.xml  fragment_camera.xml  fragment_camera2_basic.xml  fragment_item_list.xml  fragment_pass_list.xml  fragment_students.xml  item_car_detail.xml  item_search_student_result.xml  item_student_detail.xml  list_item_student_child.xml  nav_header_main.xml  view_cardview_results.xml
app/src/main/res/layout-land/: fragment_camera2_basic.xml
app/src/main/res/menu/: activity_main_drawer.xml  main.xml  main_usb_camera_toobar.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  ic_person_background.xml  strings.xml
app/src/test/java/tk/leoforney/passchecker/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libuvccamera/: build.gradle
libuvccamera/src/main/java/com/serenegiant/common/: BaseActivity.java  BaseFragment.java  BaseService.java
libuvccamera/src/main/java/com/serenegiant/usb/: CameraDialog.java  DeviceFilter.java  Size.java  USBMonitor.java  UVCCamera.java
libuvccamera/src/main/jni/: CMakeLists.txt
libuvccamera/src/main/jni/UVCCamera/: UVCButtonCallback.cpp  UVCCamera.cpp  UVCPreview.cpp  UVCStatusCallback.cpp
libuvccamera/src/main/jni/libjpeg-turbo-1.5.0/: jaricom.c  jccolor.c  jchuff.c  jcmaster.c  jdapistd.c  jdcolor.c  jdmerge.c  jerror.c  jfdctflt.c  jfdctfst.c  jidctflt.c  turbojpeg.c
libuvccamera/src/main/jni/libjpeg-turbo-1.5.0/doc/html/: annotated.html  classes.html  functions.html  functions_vars.html  group___turbo_j_p_e_g.html  index.html  modules.html  structtjregion.html  structtjscalingfactor.html  structtjtransform.html
libuvccamera/src/main/jni/libjpeg-turbo-1.5.0/doc/html/search/: all_63.html  all_64.html  all_68.html  all_6e.html  all_6f.html  all_72.html  all_74.html  all_77.html  all_78.html  all_79.html  classes_74.html  enums_74.html  enumvalues_74.html  functions_74.html  groups_74.html  typedefs_74.html  variables_63.html  variables_64.html  variables_68.html  variables_6e.html  variables_6f.html  variables_72.html  variables_74.html  variables_77.html  variables_78.html  variables_79.html
libuvccamera/src/main/jni/libjpeg-turbo-1.5.0/java/: TJBench.java  TJExample.java  TJUnitTest.java  org_libjpegturbo_turbojpeg_TJ.h  org_libjpegturbo_turbojpeg_TJCompressor.h  org_libjpegturbo_turbojpeg_TJDecompressor.h  org_libjpegturbo_turbojpeg_TJTransformer.h
libuvccamera/src/main/jni/libjpeg-turbo-1.5.0/java/doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html  serialized-form.html
libuvccamera/src/main/jni/libjpeg-turbo-1.5.0/java/doc/org/libjpegturbo/turbojpeg/: TJ.html  TJCompressor.html  TJCustomFilter.html  TJDecompressor.html  TJException.html  TJScalingFactor.html  TJTransform.html  TJTransformer.html  YUVImage.html  package-frame.html  package-summary.html  package-tree.html
libuvccamera/src/main/jni/libjpeg-turbo-1.5.0/java/org/libjpegturbo/turbojpeg/: TJ.java  TJCompressor.java  TJCustomFilter.java  TJDecompressor.java  TJException.java  TJScalingFactor.java  TJTransform.java  TJTransformer.java  YUVImage.java
libuvccamera/src/main/jni/libjpeg-turbo-1.5.0/simd/: jccolext-altivec.c
libuvccamera/src/main/jni/libusb/libusb/: core.c  descriptor.c  hotplug.c  sync.c
libuvccamera/src/main/jni/libusb/libusb/os/: android_netlink.c  threads_posix.c
libuvccamera/src/main/jni/rapidjson/doc/misc/: DoxygenLayout.xml
libuvccamera/src/main/res/layout/: dialog_camera.xml
