cmake_minimum_required(VERSION 3.7)
project(jni)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        libjpeg-turbo-1.5.0/cmakescripts/testclean.cmake
        libjpeg-turbo-1.5.0/doc/html/search/all_63.html
        libjpeg-turbo-1.5.0/doc/html/search/all_63.js
        libjpeg-turbo-1.5.0/doc/html/search/all_64.html
        libjpeg-turbo-1.5.0/doc/html/search/all_64.js
        libjpeg-turbo-1.5.0/doc/html/search/all_68.html
        libjpeg-turbo-1.5.0/doc/html/search/all_68.js
        libjpeg-turbo-1.5.0/doc/html/search/all_6e.html
        libjpeg-turbo-1.5.0/doc/html/search/all_6e.js
        libjpeg-turbo-1.5.0/doc/html/search/all_6f.html
        libjpeg-turbo-1.5.0/doc/html/search/all_6f.js
        libjpeg-turbo-1.5.0/doc/html/search/all_72.html
        libjpeg-turbo-1.5.0/doc/html/search/all_72.js
        libjpeg-turbo-1.5.0/doc/html/search/all_74.html
        libjpeg-turbo-1.5.0/doc/html/search/all_74.js
        libjpeg-turbo-1.5.0/doc/html/search/all_77.html
        libjpeg-turbo-1.5.0/doc/html/search/all_77.js
        libjpeg-turbo-1.5.0/doc/html/search/all_78.html
        libjpeg-turbo-1.5.0/doc/html/search/all_78.js
        libjpeg-turbo-1.5.0/doc/html/search/all_79.html
        libjpeg-turbo-1.5.0/doc/html/search/all_79.js
        libjpeg-turbo-1.5.0/doc/html/search/classes_74.html
        libjpeg-turbo-1.5.0/doc/html/search/classes_74.js
        libjpeg-turbo-1.5.0/doc/html/search/close.png
        libjpeg-turbo-1.5.0/doc/html/search/enums_74.html
        libjpeg-turbo-1.5.0/doc/html/search/enums_74.js
        libjpeg-turbo-1.5.0/doc/html/search/enumvalues_74.html
        libjpeg-turbo-1.5.0/doc/html/search/enumvalues_74.js
        libjpeg-turbo-1.5.0/doc/html/search/functions_74.html
        libjpeg-turbo-1.5.0/doc/html/search/functions_74.js
        libjpeg-turbo-1.5.0/doc/html/search/groups_74.html
        libjpeg-turbo-1.5.0/doc/html/search/groups_74.js
        libjpeg-turbo-1.5.0/doc/html/search/mag_sel.png
        libjpeg-turbo-1.5.0/doc/html/search/nomatches.html
        libjpeg-turbo-1.5.0/doc/html/search/search.css
        libjpeg-turbo-1.5.0/doc/html/search/search.js
        libjpeg-turbo-1.5.0/doc/html/search/search_l.png
        libjpeg-turbo-1.5.0/doc/html/search/search_m.png
        libjpeg-turbo-1.5.0/doc/html/search/search_r.png
        libjpeg-turbo-1.5.0/doc/html/search/typedefs_74.html
        libjpeg-turbo-1.5.0/doc/html/search/typedefs_74.js
        libjpeg-turbo-1.5.0/doc/html/search/variables_63.html
        libjpeg-turbo-1.5.0/doc/html/search/variables_63.js
        libjpeg-turbo-1.5.0/doc/html/search/variables_64.html
        libjpeg-turbo-1.5.0/doc/html/search/variables_64.js
        libjpeg-turbo-1.5.0/doc/html/search/variables_68.html
        libjpeg-turbo-1.5.0/doc/html/search/variables_68.js
        libjpeg-turbo-1.5.0/doc/html/search/variables_6e.html
        libjpeg-turbo-1.5.0/doc/html/search/variables_6e.js
        libjpeg-turbo-1.5.0/doc/html/search/variables_6f.html
        libjpeg-turbo-1.5.0/doc/html/search/variables_6f.js
        libjpeg-turbo-1.5.0/doc/html/search/variables_72.html
        libjpeg-turbo-1.5.0/doc/html/search/variables_72.js
        libjpeg-turbo-1.5.0/doc/html/search/variables_74.html
        libjpeg-turbo-1.5.0/doc/html/search/variables_74.js
        libjpeg-turbo-1.5.0/doc/html/search/variables_77.html
        libjpeg-turbo-1.5.0/doc/html/search/variables_77.js
        libjpeg-turbo-1.5.0/doc/html/search/variables_78.html
        libjpeg-turbo-1.5.0/doc/html/search/variables_78.js
        libjpeg-turbo-1.5.0/doc/html/search/variables_79.html
        libjpeg-turbo-1.5.0/doc/html/search/variables_79.js
        libjpeg-turbo-1.5.0/doc/html/annotated.html
        libjpeg-turbo-1.5.0/doc/html/bc_s.png
        libjpeg-turbo-1.5.0/doc/html/bdwn.png
        libjpeg-turbo-1.5.0/doc/html/classes.html
        libjpeg-turbo-1.5.0/doc/html/closed.png
        libjpeg-turbo-1.5.0/doc/html/doxygen-extra.css
        libjpeg-turbo-1.5.0/doc/html/doxygen.css
        libjpeg-turbo-1.5.0/doc/html/doxygen.png
        libjpeg-turbo-1.5.0/doc/html/dynsections.js
        libjpeg-turbo-1.5.0/doc/html/ftv2blank.png
        libjpeg-turbo-1.5.0/doc/html/ftv2cl.png
        libjpeg-turbo-1.5.0/doc/html/ftv2doc.png
        libjpeg-turbo-1.5.0/doc/html/ftv2folderclosed.png
        libjpeg-turbo-1.5.0/doc/html/ftv2folderopen.png
        libjpeg-turbo-1.5.0/doc/html/ftv2lastnode.png
        libjpeg-turbo-1.5.0/doc/html/ftv2link.png
        libjpeg-turbo-1.5.0/doc/html/ftv2mlastnode.png
        libjpeg-turbo-1.5.0/doc/html/ftv2mnode.png
        libjpeg-turbo-1.5.0/doc/html/ftv2mo.png
        libjpeg-turbo-1.5.0/doc/html/ftv2node.png
        libjpeg-turbo-1.5.0/doc/html/ftv2ns.png
        libjpeg-turbo-1.5.0/doc/html/ftv2plastnode.png
        libjpeg-turbo-1.5.0/doc/html/ftv2pnode.png
        libjpeg-turbo-1.5.0/doc/html/ftv2splitbar.png
        libjpeg-turbo-1.5.0/doc/html/ftv2vertline.png
        libjpeg-turbo-1.5.0/doc/html/functions.html
        libjpeg-turbo-1.5.0/doc/html/functions_vars.html
        libjpeg-turbo-1.5.0/doc/html/group___turbo_j_p_e_g.html
        libjpeg-turbo-1.5.0/doc/html/index.html
        libjpeg-turbo-1.5.0/doc/html/jquery.js
        libjpeg-turbo-1.5.0/doc/html/modules.html
        libjpeg-turbo-1.5.0/doc/html/nav_f.png
        libjpeg-turbo-1.5.0/doc/html/nav_g.png
        libjpeg-turbo-1.5.0/doc/html/nav_h.png
        libjpeg-turbo-1.5.0/doc/html/open.png
        libjpeg-turbo-1.5.0/doc/html/structtjregion.html
        libjpeg-turbo-1.5.0/doc/html/structtjscalingfactor.html
        libjpeg-turbo-1.5.0/doc/html/structtjtransform.html
        libjpeg-turbo-1.5.0/doc/html/sync_off.png
        libjpeg-turbo-1.5.0/doc/html/sync_on.png
        libjpeg-turbo-1.5.0/doc/html/tab_a.png
        libjpeg-turbo-1.5.0/doc/html/tab_b.png
        libjpeg-turbo-1.5.0/doc/html/tab_h.png
        libjpeg-turbo-1.5.0/doc/html/tab_s.png
        libjpeg-turbo-1.5.0/doc/html/tabs.css
        libjpeg-turbo-1.5.0/include/config.h
        libjpeg-turbo-1.5.0/include/jconfig.h
        libjpeg-turbo-1.5.0/include/jconfigint.h
        libjpeg-turbo-1.5.0/include/jsimdcfg.inc
        libjpeg-turbo-1.5.0/java/doc/org/libjpegturbo/turbojpeg/package-frame.html
        libjpeg-turbo-1.5.0/java/doc/org/libjpegturbo/turbojpeg/package-summary.html
        libjpeg-turbo-1.5.0/java/doc/org/libjpegturbo/turbojpeg/package-tree.html
        libjpeg-turbo-1.5.0/java/doc/org/libjpegturbo/turbojpeg/TJ.html
        libjpeg-turbo-1.5.0/java/doc/org/libjpegturbo/turbojpeg/TJCompressor.html
        libjpeg-turbo-1.5.0/java/doc/org/libjpegturbo/turbojpeg/TJCustomFilter.html
        libjpeg-turbo-1.5.0/java/doc/org/libjpegturbo/turbojpeg/TJDecompressor.html
        libjpeg-turbo-1.5.0/java/doc/org/libjpegturbo/turbojpeg/TJException.html
        libjpeg-turbo-1.5.0/java/doc/org/libjpegturbo/turbojpeg/TJScalingFactor.html
        libjpeg-turbo-1.5.0/java/doc/org/libjpegturbo/turbojpeg/TJTransform.html
        libjpeg-turbo-1.5.0/java/doc/org/libjpegturbo/turbojpeg/TJTransformer.html
        libjpeg-turbo-1.5.0/java/doc/org/libjpegturbo/turbojpeg/YUVImage.html
        libjpeg-turbo-1.5.0/java/doc/resources/background.gif
        libjpeg-turbo-1.5.0/java/doc/resources/tab.gif
        libjpeg-turbo-1.5.0/java/doc/resources/titlebar.gif
        libjpeg-turbo-1.5.0/java/doc/resources/titlebar_end.gif
        libjpeg-turbo-1.5.0/java/doc/allclasses-frame.html
        libjpeg-turbo-1.5.0/java/doc/allclasses-noframe.html
        libjpeg-turbo-1.5.0/java/doc/constant-values.html
        libjpeg-turbo-1.5.0/java/doc/deprecated-list.html
        libjpeg-turbo-1.5.0/java/doc/help-doc.html
        libjpeg-turbo-1.5.0/java/doc/index-all.html
        libjpeg-turbo-1.5.0/java/doc/index.html
        libjpeg-turbo-1.5.0/java/doc/overview-tree.html
        libjpeg-turbo-1.5.0/java/doc/package-list
        libjpeg-turbo-1.5.0/java/doc/serialized-form.html
        libjpeg-turbo-1.5.0/java/doc/stylesheet.css
        libjpeg-turbo-1.5.0/java/org/libjpegturbo/turbojpeg/TJ.java
        libjpeg-turbo-1.5.0/java/org/libjpegturbo/turbojpeg/TJCompressor.java
        libjpeg-turbo-1.5.0/java/org/libjpegturbo/turbojpeg/TJCustomFilter.java
        libjpeg-turbo-1.5.0/java/org/libjpegturbo/turbojpeg/TJDecompressor.java
        libjpeg-turbo-1.5.0/java/org/libjpegturbo/turbojpeg/TJException.java
        libjpeg-turbo-1.5.0/java/org/libjpegturbo/turbojpeg/TJLoader.java.in
        libjpeg-turbo-1.5.0/java/org/libjpegturbo/turbojpeg/TJLoader.java.tmpl
        libjpeg-turbo-1.5.0/java/org/libjpegturbo/turbojpeg/TJScalingFactor.java
        libjpeg-turbo-1.5.0/java/org/libjpegturbo/turbojpeg/TJTransform.java
        libjpeg-turbo-1.5.0/java/org/libjpegturbo/turbojpeg/TJTransformer.java
        libjpeg-turbo-1.5.0/java/org/libjpegturbo/turbojpeg/YUVImage.java
        libjpeg-turbo-1.5.0/java/CMakeLists.txt
        libjpeg-turbo-1.5.0/java/Makefile.am
        libjpeg-turbo-1.5.0/java/Makefile.in
        libjpeg-turbo-1.5.0/java/MANIFEST.MF
        libjpeg-turbo-1.5.0/java/org_libjpegturbo_turbojpeg_TJ.h
        libjpeg-turbo-1.5.0/java/org_libjpegturbo_turbojpeg_TJCompressor.h
        libjpeg-turbo-1.5.0/java/org_libjpegturbo_turbojpeg_TJDecompressor.h
        libjpeg-turbo-1.5.0/java/org_libjpegturbo_turbojpeg_TJTransformer.h
        libjpeg-turbo-1.5.0/java/README
        libjpeg-turbo-1.5.0/java/TJBench.java
        libjpeg-turbo-1.5.0/java/TJExample.java
        libjpeg-turbo-1.5.0/java/TJUnitTest.java
        libjpeg-turbo-1.5.0/md5/CMakeLists.txt
        libjpeg-turbo-1.5.0/md5/Makefile.am
        libjpeg-turbo-1.5.0/md5/Makefile.in
        libjpeg-turbo-1.5.0/md5/md5.c
        libjpeg-turbo-1.5.0/md5/md5.h
        libjpeg-turbo-1.5.0/md5/md5cmp.c
        libjpeg-turbo-1.5.0/md5/md5hl.c
        libjpeg-turbo-1.5.0/release/deb-control.tmpl
        libjpeg-turbo-1.5.0/release/Distribution.xml
        libjpeg-turbo-1.5.0/release/libjpeg-turbo.nsi.in
        libjpeg-turbo-1.5.0/release/libjpeg-turbo.spec.in
        libjpeg-turbo-1.5.0/release/libjpeg.pc.in
        libjpeg-turbo-1.5.0/release/libturbojpeg.pc.in
        libjpeg-turbo-1.5.0/release/License.rtf
        libjpeg-turbo-1.5.0/release/makecygwinpkg.in
        libjpeg-turbo-1.5.0/release/makedpkg.in
        libjpeg-turbo-1.5.0/release/makemacpkg.in
        libjpeg-turbo-1.5.0/release/ReadMe.txt
        libjpeg-turbo-1.5.0/release/uninstall.in
        libjpeg-turbo-1.5.0/release/Welcome.rtf
        libjpeg-turbo-1.5.0/sharedlib/CMakeLists.txt
        libjpeg-turbo-1.5.0/simd/CMakeLists.txt
        libjpeg-turbo-1.5.0/simd/jccolext-altivec.c
        libjpeg-turbo-1.5.0/simd/jccolext-mmx.asm
        libjpeg-turbo-1.5.0/simd/jccolext-sse2-64.asm
        libjpeg-turbo-1.5.0/simd/jccolext-sse2.asm
        libjpeg-turbo-1.5.0/simd/jccolor-altivec.c
        libjpeg-turbo-1.5.0/simd/jccolor-mmx.asm
        libjpeg-turbo-1.5.0/simd/jccolor-sse2-64.asm
        libjpeg-turbo-1.5.0/simd/jccolor-sse2.asm
        libjpeg-turbo-1.5.0/simd/jcgray-altivec.c
        libjpeg-turbo-1.5.0/simd/jcgray-mmx.asm
        libjpeg-turbo-1.5.0/simd/jcgray-sse2-64.asm
        libjpeg-turbo-1.5.0/simd/jcgray-sse2.asm
        libjpeg-turbo-1.5.0/simd/jcgryext-altivec.c
        libjpeg-turbo-1.5.0/simd/jcgryext-mmx.asm
        libjpeg-turbo-1.5.0/simd/jcgryext-sse2-64.asm
        libjpeg-turbo-1.5.0/simd/jcgryext-sse2.asm
        libjpeg-turbo-1.5.0/simd/jchuff-sse2-64.asm
        libjpeg-turbo-1.5.0/simd/jchuff-sse2.asm
        libjpeg-turbo-1.5.0/simd/jcolsamp.inc
        libjpeg-turbo-1.5.0/simd/jcsample-altivec.c
        libjpeg-turbo-1.5.0/simd/jcsample-mmx.asm
        libjpeg-turbo-1.5.0/simd/jcsample-sse2-64.asm
        libjpeg-turbo-1.5.0/simd/jcsample-sse2.asm
        libjpeg-turbo-1.5.0/simd/jcsample.h
        libjpeg-turbo-1.5.0/simd/jdcolext-altivec.c
        libjpeg-turbo-1.5.0/simd/jdcolext-mmx.asm
        libjpeg-turbo-1.5.0/simd/jdcolext-sse2-64.asm
        libjpeg-turbo-1.5.0/simd/jdcolext-sse2.asm
        libjpeg-turbo-1.5.0/simd/jdcolor-altivec.c
        libjpeg-turbo-1.5.0/simd/jdcolor-mmx.asm
        libjpeg-turbo-1.5.0/simd/jdcolor-sse2-64.asm
        libjpeg-turbo-1.5.0/simd/jdcolor-sse2.asm
        libjpeg-turbo-1.5.0/simd/jdct.inc
        libjpeg-turbo-1.5.0/simd/jdmerge-altivec.c
        libjpeg-turbo-1.5.0/simd/jdmerge-mmx.asm
        libjpeg-turbo-1.5.0/simd/jdmerge-sse2-64.asm
        libjpeg-turbo-1.5.0/simd/jdmerge-sse2.asm
        libjpeg-turbo-1.5.0/simd/jdmrgext-altivec.c
        libjpeg-turbo-1.5.0/simd/jdmrgext-mmx.asm
        libjpeg-turbo-1.5.0/simd/jdmrgext-sse2-64.asm
        libjpeg-turbo-1.5.0/simd/jdmrgext-sse2.asm
        libjpeg-turbo-1.5.0/simd/jdsample-altivec.c
        libjpeg-turbo-1.5.0/simd/jdsample-mmx.asm
        libjpeg-turbo-1.5.0/simd/jdsample-sse2-64.asm
        libjpeg-turbo-1.5.0/simd/jdsample-sse2.asm
        libjpeg-turbo-1.5.0/simd/jfdctflt-3dn.asm
        libjpeg-turbo-1.5.0/simd/jfdctflt-sse-64.asm
        libjpeg-turbo-1.5.0/simd/jfdctflt-sse.asm
        libjpeg-turbo-1.5.0/simd/jfdctfst-altivec.c
        libjpeg-turbo-1.5.0/simd/jfdctfst-mmx.asm
        libjpeg-turbo-1.5.0/simd/jfdctfst-sse2-64.asm
        libjpeg-turbo-1.5.0/simd/jfdctfst-sse2.asm
        libjpeg-turbo-1.5.0/simd/jfdctint-altivec.c
        libjpeg-turbo-1.5.0/simd/jfdctint-mmx.asm
        libjpeg-turbo-1.5.0/simd/jfdctint-sse2-64.asm
        libjpeg-turbo-1.5.0/simd/jfdctint-sse2.asm
        libjpeg-turbo-1.5.0/simd/jidctflt-3dn.asm
        libjpeg-turbo-1.5.0/simd/jidctflt-sse.asm
        libjpeg-turbo-1.5.0/simd/jidctflt-sse2-64.asm
        libjpeg-turbo-1.5.0/simd/jidctflt-sse2.asm
        libjpeg-turbo-1.5.0/simd/jidctfst-altivec.c
        libjpeg-turbo-1.5.0/simd/jidctfst-mmx.asm
        libjpeg-turbo-1.5.0/simd/jidctfst-sse2-64.asm
        libjpeg-turbo-1.5.0/simd/jidctfst-sse2.asm
        libjpeg-turbo-1.5.0/simd/jidctint-altivec.c
        libjpeg-turbo-1.5.0/simd/jidctint-mmx.asm
        libjpeg-turbo-1.5.0/simd/jidctint-sse2-64.asm
        libjpeg-turbo-1.5.0/simd/jidctint-sse2.asm
        libjpeg-turbo-1.5.0/simd/jidctred-mmx.asm
        libjpeg-turbo-1.5.0/simd/jidctred-sse2-64.asm
        libjpeg-turbo-1.5.0/simd/jidctred-sse2.asm
        libjpeg-turbo-1.5.0/simd/jpeg_nbits_table.inc
        libjpeg-turbo-1.5.0/simd/jquant-3dn.asm
        libjpeg-turbo-1.5.0/simd/jquant-mmx.asm
        libjpeg-turbo-1.5.0/simd/jquant-sse.asm
        libjpeg-turbo-1.5.0/simd/jquantf-sse2-64.asm
        libjpeg-turbo-1.5.0/simd/jquantf-sse2.asm
        libjpeg-turbo-1.5.0/simd/jquanti-altivec.c
        libjpeg-turbo-1.5.0/simd/jquanti-sse2-64.asm
        libjpeg-turbo-1.5.0/simd/jquanti-sse2.asm
        libjpeg-turbo-1.5.0/simd/jsimd.h
        libjpeg-turbo-1.5.0/simd/jsimd_altivec.h
        libjpeg-turbo-1.5.0/simd/jsimd_arm.c
        libjpeg-turbo-1.5.0/simd/jsimd_arm64.c
        libjpeg-turbo-1.5.0/simd/jsimd_arm64_neon.S
        libjpeg-turbo-1.5.0/simd/jsimd_arm_neon.S
        libjpeg-turbo-1.5.0/simd/jsimd_i386.c
        libjpeg-turbo-1.5.0/simd/jsimd_mips.c
        libjpeg-turbo-1.5.0/simd/jsimd_mips_dspr2.S
        libjpeg-turbo-1.5.0/simd/jsimd_mips_dspr2_asm.h
        libjpeg-turbo-1.5.0/simd/jsimd_powerpc.c
        libjpeg-turbo-1.5.0/simd/jsimd_x86_64.c
        libjpeg-turbo-1.5.0/simd/jsimdcfg.inc.h
        libjpeg-turbo-1.5.0/simd/jsimdcpu.asm
        libjpeg-turbo-1.5.0/simd/jsimdext.inc
        libjpeg-turbo-1.5.0/simd/Makefile.am
        libjpeg-turbo-1.5.0/simd/Makefile.in
        libjpeg-turbo-1.5.0/simd/nasm_lt.sh
        libjpeg-turbo-1.5.0/testimages/nightshot_iso_100.bmp
        libjpeg-turbo-1.5.0/testimages/nightshot_iso_100.txt
        libjpeg-turbo-1.5.0/testimages/testimgari.jpg
        libjpeg-turbo-1.5.0/testimages/testimgint.jpg
        libjpeg-turbo-1.5.0/testimages/testorig.jpg
        libjpeg-turbo-1.5.0/testimages/testorig.ppm
        libjpeg-turbo-1.5.0/testimages/testorig12.jpg
        libjpeg-turbo-1.5.0/testimages/vgl_5674_0098.bmp
        libjpeg-turbo-1.5.0/testimages/vgl_6434_0018a.bmp
        libjpeg-turbo-1.5.0/testimages/vgl_6548_0026a.bmp
        libjpeg-turbo-1.5.0/win/jconfig.h.in
        libjpeg-turbo-1.5.0/win/jconfigint.h.in
        libjpeg-turbo-1.5.0/win/jpeg62-memsrcdst.def
        libjpeg-turbo-1.5.0/win/jpeg62.def
        libjpeg-turbo-1.5.0/win/jpeg7-memsrcdst.def
        libjpeg-turbo-1.5.0/win/jpeg7.def
        libjpeg-turbo-1.5.0/win/jpeg8.def
        libjpeg-turbo-1.5.0/win/jsimdcfg.inc
        libjpeg-turbo-1.5.0/acinclude.m4
        libjpeg-turbo-1.5.0/aclocal.m4
        libjpeg-turbo-1.5.0/Android.mk
        libjpeg-turbo-1.5.0/ar-lib
        libjpeg-turbo-1.5.0/bmp.c
        libjpeg-turbo-1.5.0/bmp.h
        libjpeg-turbo-1.5.0/BUILDING.md
        libjpeg-turbo-1.5.0/cderror.h
        libjpeg-turbo-1.5.0/cdjpeg.c
        libjpeg-turbo-1.5.0/cdjpeg.h
        libjpeg-turbo-1.5.0/ChangeLog.md
        libjpeg-turbo-1.5.0/cjpeg.1
        libjpeg-turbo-1.5.0/cjpeg.c
        libjpeg-turbo-1.5.0/CMakeLists.txt
        libjpeg-turbo-1.5.0/coderules.txt
        libjpeg-turbo-1.5.0/compile
        libjpeg-turbo-1.5.0/config.guess
        libjpeg-turbo-1.5.0/config.h.in
        libjpeg-turbo-1.5.0/config.sub
        libjpeg-turbo-1.5.0/configure
        libjpeg-turbo-1.5.0/configure.ac
        libjpeg-turbo-1.5.0/depcomp
        libjpeg-turbo-1.5.0/djpeg.1
        libjpeg-turbo-1.5.0/djpeg.c
        libjpeg-turbo-1.5.0/doxygen-extra.css
        libjpeg-turbo-1.5.0/doxygen.config
        libjpeg-turbo-1.5.0/example.c
        libjpeg-turbo-1.5.0/install-sh
        libjpeg-turbo-1.5.0/jaricom.c
        libjpeg-turbo-1.5.0/jcapimin.c
        libjpeg-turbo-1.5.0/jcapistd.c
        libjpeg-turbo-1.5.0/jcarith.c
        libjpeg-turbo-1.5.0/jccoefct.c
        libjpeg-turbo-1.5.0/jccolext.c
        libjpeg-turbo-1.5.0/jccolor.c
        libjpeg-turbo-1.5.0/jcdctmgr.c
        libjpeg-turbo-1.5.0/jchuff.c
        libjpeg-turbo-1.5.0/jchuff.h
        libjpeg-turbo-1.5.0/jcinit.c
        libjpeg-turbo-1.5.0/jcmainct.c
        libjpeg-turbo-1.5.0/jcmarker.c
        libjpeg-turbo-1.5.0/jcmaster.c
        libjpeg-turbo-1.5.0/jcomapi.c
        libjpeg-turbo-1.5.0/jconfig.h.in
        libjpeg-turbo-1.5.0/jconfig.txt
        libjpeg-turbo-1.5.0/jconfigint.h.in
        libjpeg-turbo-1.5.0/jcparam.c
        libjpeg-turbo-1.5.0/jcphuff.c
        libjpeg-turbo-1.5.0/jcprepct.c
        libjpeg-turbo-1.5.0/jcsample.c
        libjpeg-turbo-1.5.0/jcstest.c
        libjpeg-turbo-1.5.0/jctrans.c
        libjpeg-turbo-1.5.0/jdapimin.c
        libjpeg-turbo-1.5.0/jdapistd.c
        libjpeg-turbo-1.5.0/jdarith.c
        libjpeg-turbo-1.5.0/jdatadst-tj.c
        libjpeg-turbo-1.5.0/jdatadst.c
        libjpeg-turbo-1.5.0/jdatasrc-tj.c
        libjpeg-turbo-1.5.0/jdatasrc.c
        libjpeg-turbo-1.5.0/jdcoefct.c
        libjpeg-turbo-1.5.0/jdcoefct.h
        libjpeg-turbo-1.5.0/jdcol565.c
        libjpeg-turbo-1.5.0/jdcolext.c
        libjpeg-turbo-1.5.0/jdcolor.c
        libjpeg-turbo-1.5.0/jdct.h
        libjpeg-turbo-1.5.0/jddctmgr.c
        libjpeg-turbo-1.5.0/jdhuff.c
        libjpeg-turbo-1.5.0/jdhuff.h
        libjpeg-turbo-1.5.0/jdinput.c
        libjpeg-turbo-1.5.0/jdmainct.c
        libjpeg-turbo-1.5.0/jdmainct.h
        libjpeg-turbo-1.5.0/jdmarker.c
        libjpeg-turbo-1.5.0/jdmaster.c
        libjpeg-turbo-1.5.0/jdmaster.h
        libjpeg-turbo-1.5.0/jdmerge.c
        libjpeg-turbo-1.5.0/jdmrg565.c
        libjpeg-turbo-1.5.0/jdmrgext.c
        libjpeg-turbo-1.5.0/jdphuff.c
        libjpeg-turbo-1.5.0/jdpostct.c
        libjpeg-turbo-1.5.0/jdsample.c
        libjpeg-turbo-1.5.0/jdsample.h
        libjpeg-turbo-1.5.0/jdtrans.c
        libjpeg-turbo-1.5.0/jerror.c
        libjpeg-turbo-1.5.0/jerror.h
        libjpeg-turbo-1.5.0/jfdctflt.c
        libjpeg-turbo-1.5.0/jfdctfst.c
        libjpeg-turbo-1.5.0/jfdctint.c
        libjpeg-turbo-1.5.0/jidctflt.c
        libjpeg-turbo-1.5.0/jidctfst.c
        libjpeg-turbo-1.5.0/jidctint.c
        libjpeg-turbo-1.5.0/jidctred.c
        libjpeg-turbo-1.5.0/jinclude.h
        libjpeg-turbo-1.5.0/jmemmgr.c
        libjpeg-turbo-1.5.0/jmemnobs.c
        libjpeg-turbo-1.5.0/jmemsys.h
        libjpeg-turbo-1.5.0/jmorecfg.h
        libjpeg-turbo-1.5.0/jpeg_nbits_table.h
        libjpeg-turbo-1.5.0/jpegcomp.h
        libjpeg-turbo-1.5.0/jpegint.h
        libjpeg-turbo-1.5.0/jpeglib.h
        libjpeg-turbo-1.5.0/jpegtran.1
        libjpeg-turbo-1.5.0/jpegtran.c
        libjpeg-turbo-1.5.0/jquant1.c
        libjpeg-turbo-1.5.0/jquant2.c
        libjpeg-turbo-1.5.0/jsimd.h
        libjpeg-turbo-1.5.0/jsimd_none.c
        libjpeg-turbo-1.5.0/jsimddct.h
        libjpeg-turbo-1.5.0/jstdhuff.c
        libjpeg-turbo-1.5.0/jutils.c
        libjpeg-turbo-1.5.0/jversion.h
        libjpeg-turbo-1.5.0/libjpeg.map.in
        libjpeg-turbo-1.5.0/libjpeg.txt
        libjpeg-turbo-1.5.0/LICENSE.md
        libjpeg-turbo-1.5.0/ltmain.sh
        libjpeg-turbo-1.5.0/Makefile.am
        libjpeg-turbo-1.5.0/Makefile.in
        libjpeg-turbo-1.5.0/missing
        libjpeg-turbo-1.5.0/rdbmp.c
        libjpeg-turbo-1.5.0/rdcolmap.c
        libjpeg-turbo-1.5.0/rdgif.c
        libjpeg-turbo-1.5.0/rdjpgcom.1
        libjpeg-turbo-1.5.0/rdjpgcom.c
        libjpeg-turbo-1.5.0/rdppm.c
        libjpeg-turbo-1.5.0/rdrle.c
        libjpeg-turbo-1.5.0/rdswitch.c
        libjpeg-turbo-1.5.0/rdtarga.c
        libjpeg-turbo-1.5.0/README.ijg
        libjpeg-turbo-1.5.0/README.md
        libjpeg-turbo-1.5.0/structure.txt
        libjpeg-turbo-1.5.0/tjbench.c
        libjpeg-turbo-1.5.0/tjbenchtest.in
        libjpeg-turbo-1.5.0/tjbenchtest.java.in
        libjpeg-turbo-1.5.0/tjexampletest.in
        libjpeg-turbo-1.5.0/tjunittest.c
        libjpeg-turbo-1.5.0/tjutil.c
        libjpeg-turbo-1.5.0/tjutil.h
        libjpeg-turbo-1.5.0/transupp.c
        libjpeg-turbo-1.5.0/transupp.h
        libjpeg-turbo-1.5.0/turbojpeg-jni.c
        libjpeg-turbo-1.5.0/turbojpeg-mapfile
        libjpeg-turbo-1.5.0/turbojpeg-mapfile.jni
        libjpeg-turbo-1.5.0/turbojpeg.c
        libjpeg-turbo-1.5.0/turbojpeg.h
        libjpeg-turbo-1.5.0/usage.txt
        libjpeg-turbo-1.5.0/wizard.txt
        libjpeg-turbo-1.5.0/wrbmp.c
        libjpeg-turbo-1.5.0/wrgif.c
        libjpeg-turbo-1.5.0/wrjpgcom.1
        libjpeg-turbo-1.5.0/wrjpgcom.c
        libjpeg-turbo-1.5.0/wrppm.c
        libjpeg-turbo-1.5.0/wrppm.h
        libjpeg-turbo-1.5.0/wrrle.c
        libjpeg-turbo-1.5.0/wrtarga.c
        libusb/.private/bd.cmd
        libusb/.private/bm.sh
        libusb/.private/bwince.cmd
        libusb/.private/post-rewrite.sh
        libusb/.private/pre-commit.sh
        libusb/.private/README.txt
        libusb/.private/wbs.txt
        libusb/.private/wbs_wince.txt
        libusb/android/jni/Android.mk
        libusb/android/jni/Android_original.mk
        libusb/android/jni/Application.mk
        libusb/android/jni/examples.mk
        libusb/android/jni/libusb.mk
        libusb/android/jni/libusb_original.mk
        libusb/android/jni/tests.mk
        libusb/android/config.h
        libusb/android/config_original.h
        libusb/android/README
        libusb/doc/doxygen.cfg.in
        libusb/doc/libusb.png
        libusb/doc/Makefile.am
        libusb/examples/getopt/getopt.c
        libusb/examples/getopt/getopt.h
        libusb/examples/getopt/getopt1.c
        libusb/examples/dpfp.c
        libusb/examples/dpfp_threaded.c
        libusb/examples/ezusb.c
        libusb/examples/ezusb.h
        libusb/examples/fxload.c
        libusb/examples/hotplugtest.c
        libusb/examples/listdevs.c
        libusb/examples/Makefile.am
        libusb/examples/sam3u_benchmark.c
        libusb/examples/xusb.c
        libusb/libusb/os/android_netlink.c
        libusb/libusb/os/android_usbfs.c
        libusb/libusb/os/android_usbfs.h
        libusb/libusb/os/darwin_usb.c
        libusb/libusb/os/darwin_usb.h
        libusb/libusb/os/linux_netlink.c
        libusb/libusb/os/linux_udev.c
        libusb/libusb/os/linux_usbfs.c
        libusb/libusb/os/linux_usbfs.h
        libusb/libusb/os/netbsd_usb.c
        libusb/libusb/os/openbsd_usb.c
        libusb/libusb/os/poll_posix.c
        libusb/libusb/os/poll_posix.h
        libusb/libusb/os/poll_posix_original.c
        libusb/libusb/os/poll_windows.c
        libusb/libusb/os/poll_windows.h
        libusb/libusb/os/threads_posix.c
        libusb/libusb/os/threads_posix.h
        libusb/libusb/os/threads_windows.c
        libusb/libusb/os/threads_windows.h
        libusb/libusb/os/wince_usb.c
        libusb/libusb/os/wince_usb.h
        libusb/libusb/os/windows_common.h
        libusb/libusb/os/windows_usb.c
        libusb/libusb/os/windows_usb.h
        libusb/libusb/config.h
        libusb/libusb/core.c
        libusb/libusb/core_original.c
        libusb/libusb/descriptor.c
        libusb/libusb/descriptor_original.c
        libusb/libusb/hotplug.c
        libusb/libusb/hotplug.h
        libusb/libusb/hotplug_original.c
        libusb/libusb/io.c
        libusb/libusb/io_original.c
        libusb/libusb/libusb-1.0.def
        libusb/libusb/libusb-1.0.rc
        libusb/libusb/libusb.h
        libusb/libusb/libusb_original.h
        libusb/libusb/libusbi.h
        libusb/libusb/libusbi_original.h
        libusb/libusb/Makefile.am
        libusb/libusb/strerror.c
        libusb/libusb/sync.c
        libusb/libusb/sync_original.c
        libusb/libusb/version.h
        libusb/libusb/version_nano.h
        libusb/msvc/config.h
        libusb/msvc/ddk_build.cmd
        libusb/msvc/errno.h
        libusb/msvc/fxload_2010.vcxproj
        libusb/msvc/fxload_2010.vcxproj.filters
        libusb/msvc/fxload_2012.vcxproj
        libusb/msvc/fxload_2012.vcxproj.filters
        libusb/msvc/fxload_2013.vcxproj
        libusb/msvc/fxload_sources
        libusb/msvc/getopt_2005.vcproj
        libusb/msvc/getopt_2010.vcxproj
        libusb/msvc/getopt_2010.vcxproj.filters
        libusb/msvc/getopt_2012.vcxproj
        libusb/msvc/getopt_2012.vcxproj.filters
        libusb/msvc/getopt_2013.vcxproj
        libusb/msvc/getopt_sources
        libusb/msvc/hotplugtest_2010.vcxproj
        libusb/msvc/hotplugtest_2010.vcxproj.filters
        libusb/msvc/hotplugtest_2012.vcxproj
        libusb/msvc/hotplugtest_2012.vcxproj.filters
        libusb/msvc/hotplugtest_2013.vcxproj
        libusb/msvc/hotplugtest_sources
        libusb/msvc/inttypes.h
        libusb/msvc/libusb.dsw
        libusb/msvc/libusb_2005.sln
        libusb/msvc/libusb_2010.sln
        libusb/msvc/libusb_2012.sln
        libusb/msvc/libusb_2013.sln
        libusb/msvc/libusb_dll.dsp
        libusb/msvc/libusb_dll_2005.vcproj
        libusb/msvc/libusb_dll_2010.vcxproj
        libusb/msvc/libusb_dll_2010.vcxproj.filters
        libusb/msvc/libusb_dll_2012.vcxproj
        libusb/msvc/libusb_dll_2012.vcxproj.filters
        libusb/msvc/libusb_dll_2013.vcxproj
        libusb/msvc/libusb_dll_wince.vcproj
        libusb/msvc/libusb_sources
        libusb/msvc/libusb_static.dsp
        libusb/msvc/libusb_static_2005.vcproj
        libusb/msvc/libusb_static_2010.vcxproj
        libusb/msvc/libusb_static_2010.vcxproj.filters
        libusb/msvc/libusb_static_2012.vcxproj
        libusb/msvc/libusb_static_2012.vcxproj.filters
        libusb/msvc/libusb_static_2013.vcxproj
        libusb/msvc/libusb_static_wince.vcproj
        libusb/msvc/libusb_wince.sln
        libusb/msvc/listdevs.dsp
        libusb/msvc/listdevs_2005.vcproj
        libusb/msvc/listdevs_2010.vcxproj
        libusb/msvc/listdevs_2010.vcxproj.filters
        libusb/msvc/listdevs_2012.vcxproj
        libusb/msvc/listdevs_2012.vcxproj.filters
        libusb/msvc/listdevs_2013.vcxproj
        libusb/msvc/listdevs_sources
        libusb/msvc/listdevs_wince.vcproj
        libusb/msvc/missing.c
        libusb/msvc/missing.h
        libusb/msvc/stdint.h
        libusb/msvc/stress_2005.vcproj
        libusb/msvc/stress_2010.vcxproj
        libusb/msvc/stress_2010.vcxproj.filters
        libusb/msvc/stress_2012.vcxproj
        libusb/msvc/stress_2012.vcxproj.filters
        libusb/msvc/stress_2013.vcxproj
        libusb/msvc/stress_wince.vcproj
        libusb/msvc/xusb.dsp
        libusb/msvc/xusb_2005.vcproj
        libusb/msvc/xusb_2010.vcxproj
        libusb/msvc/xusb_2010.vcxproj.filters
        libusb/msvc/xusb_2012.vcxproj
        libusb/msvc/xusb_2012.vcxproj.filters
        libusb/msvc/xusb_2013.vcxproj
        libusb/msvc/xusb_sources
        libusb/msvc/xusb_wince.vcproj
        libusb/tests/libusb_testlib.h
        libusb/tests/Makefile.am
        libusb/tests/stress.c
        libusb/tests/testlib.c
        libusb/Xcode/libusb.xcodeproj/project.pbxproj
        libusb/Xcode/common.xcconfig
        libusb/Xcode/config.h
        libusb/Xcode/debug.xcconfig
        libusb/Xcode/libusb.xcconfig
        libusb/Xcode/libusb_debug.xcconfig
        libusb/Xcode/libusb_release.xcconfig
        libusb/Xcode/release.xcconfig
        libusb/AUTHORS
        libusb/autogen.sh
        libusb/bootstrap.sh
        libusb/ChangeLog
        libusb/configure.ac
        libusb/COPYING
        libusb/INSTALL
        libusb/INSTALL_WIN.txt
        libusb/libusb-1.0.pc.in
        libusb/Makefile.am
        libusb/NEWS
        libusb/PORTING
        libusb/README
        libusb/README.git
        libusb/TODO
        libuvc/android/jni/Android.mk
        libuvc/cameras/isight_imac.txt
        libuvc/cameras/isight_macbook.txt
        libuvc/cameras/ms_lifecam_show.txt
        libuvc/cameras/quickcampro9000.txt
        libuvc/cameras/quickcampro9000_builtin_ctrls.txt
        libuvc/cameras/quickcampro9000_extra_ctrls.txt
        libuvc/include/libuvc/libuvc.h
        libuvc/include/libuvc/libuvc_config.h
        libuvc/include/libuvc/libuvc_config.h.in
        libuvc/include/libuvc/libuvc_internal.h
        libuvc/include/libuvc/libuvc_internal_original.h
        libuvc/include/libuvc/libuvc_original.h
        libuvc/include/utlist.h
        libuvc/src/ctrl.c
        libuvc/src/ctrl_original.c
        libuvc/src/device.c
        libuvc/src/device_original.c
        libuvc/src/diag.c
        libuvc/src/diag_original.c
        libuvc/src/example.c
        libuvc/src/frame-mjpeg.c
        libuvc/src/frame-mjpeg_original.c
        libuvc/src/frame.c
        libuvc/src/frame_original.c
        libuvc/src/init.c
        libuvc/src/init_original.c
        libuvc/src/misc.c
        libuvc/src/stream.c
        libuvc/src/stream_original.c
        libuvc/src/test.c
        libuvc/changelog.txt
        libuvc/CMakeLists.txt
        libuvc/doxygen.conf
        libuvc/libuvcConfig.cmake.in
        libuvc/libuvcConfigVersion.cmake.in
        libuvc/README.md
        rapidjson/doc/diagram/insituparsing.dot
        rapidjson/doc/diagram/insituparsing.png
        rapidjson/doc/diagram/iterative-parser-states-diagram.dot
        rapidjson/doc/diagram/iterative-parser-states-diagram.png
        rapidjson/doc/diagram/makefile
        rapidjson/doc/diagram/move1.dot
        rapidjson/doc/diagram/move1.png
        rapidjson/doc/diagram/move2.dot
        rapidjson/doc/diagram/move2.png
        rapidjson/doc/diagram/move3.dot
        rapidjson/doc/diagram/move3.png
        rapidjson/doc/diagram/normalparsing.dot
        rapidjson/doc/diagram/normalparsing.png
        rapidjson/doc/diagram/simpledom.dot
        rapidjson/doc/diagram/simpledom.png
        rapidjson/doc/diagram/tutorial.dot
        rapidjson/doc/diagram/tutorial.png
        rapidjson/doc/logo/rapidjson.png
        rapidjson/doc/logo/rapidjson.svg
        rapidjson/doc/misc/doxygenextra.css
        rapidjson/doc/misc/DoxygenLayout.xml
        rapidjson/doc/misc/footer.html
        rapidjson/doc/misc/header.html
        rapidjson/doc/dom.md
        rapidjson/doc/encoding.md
        rapidjson/doc/faq.md
        rapidjson/doc/features.md
        rapidjson/doc/internals.md
        rapidjson/doc/performance.md
        rapidjson/doc/sax.md
        rapidjson/doc/stream.md
        rapidjson/doc/tutorial.md
        rapidjson/example/capitalize/capitalize.cpp
        rapidjson/example/condense/condense.cpp
        rapidjson/example/messagereader/messagereader.cpp
        rapidjson/example/pretty/pretty.cpp
        rapidjson/example/prettyauto/prettyauto.cpp
        rapidjson/example/serialize/serialize.cpp
        rapidjson/example/simpledom/simpledom.cpp
        rapidjson/example/simplereader/simplereader.cpp
        rapidjson/example/simplewriter/simplewriter.cpp
        rapidjson/example/tutorial/tutorial.cpp
        rapidjson/include/rapidjson/error/en.h
        rapidjson/include/rapidjson/error/error.h
        rapidjson/include/rapidjson/internal/dtoa.h
        rapidjson/include/rapidjson/internal/itoa.h
        rapidjson/include/rapidjson/internal/meta.h
        rapidjson/include/rapidjson/internal/pow10.h
        rapidjson/include/rapidjson/internal/stack.h
        rapidjson/include/rapidjson/internal/strfunc.h
        rapidjson/include/rapidjson/msinttypes/inttypes.h
        rapidjson/include/rapidjson/msinttypes/stdint.h
        rapidjson/include/rapidjson/allocators.h
        rapidjson/include/rapidjson/document.h
        rapidjson/include/rapidjson/encodedstream.h
        rapidjson/include/rapidjson/encodings.h
        rapidjson/include/rapidjson/filereadstream.h
        rapidjson/include/rapidjson/filestream.h
        rapidjson/include/rapidjson/filewritestream.h
        rapidjson/include/rapidjson/memorybuffer.h
        rapidjson/include/rapidjson/memorystream.h
        rapidjson/include/rapidjson/prettywriter.h
        rapidjson/include/rapidjson/rapidjson.h
        rapidjson/include/rapidjson/reader.h
        rapidjson/include/rapidjson/stringbuffer.h
        rapidjson/include/rapidjson/writer.h
        rapidjson/test/perftest/jsoncpptest.cpp
        rapidjson/test/perftest/misctest.cpp
        rapidjson/test/perftest/perftest.cpp
        rapidjson/test/perftest/perftest.h
        rapidjson/test/perftest/platformtest.cpp
        rapidjson/test/perftest/rapidjsontest.cpp
        rapidjson/test/perftest/ultrajsontest.cpp
        rapidjson/test/perftest/yajl_all.c
        rapidjson/test/perftest/yajltest.cpp
        rapidjson/test/unittest/documenttest.cpp
        rapidjson/test/unittest/encodedstreamtest.cpp
        rapidjson/test/unittest/encodingstest.cpp
        rapidjson/test/unittest/filestreamtest.cpp
        rapidjson/test/unittest/jsoncheckertest.cpp
        rapidjson/test/unittest/readertest.cpp
        rapidjson/test/unittest/unittest.cpp
        rapidjson/test/unittest/unittest.h
        rapidjson/test/unittest/valuetest.cpp
        rapidjson/test/unittest/writertest.cpp
        rapidjson/thirdparty/jsoncpp/include/json/autolink.h
        rapidjson/thirdparty/jsoncpp/include/json/config.h
        rapidjson/thirdparty/jsoncpp/include/json/features.h
        rapidjson/thirdparty/jsoncpp/include/json/forwards.h
        rapidjson/thirdparty/jsoncpp/include/json/json.h
        rapidjson/thirdparty/jsoncpp/include/json/reader.h
        rapidjson/thirdparty/jsoncpp/include/json/value.h
        rapidjson/thirdparty/jsoncpp/include/json/writer.h
        rapidjson/thirdparty/jsoncpp/src/jsontestrunner/main.cpp
        rapidjson/thirdparty/jsoncpp/src/jsontestrunner/sconscript
        rapidjson/thirdparty/jsoncpp/src/lib_json/json_batchallocator.h
        rapidjson/thirdparty/jsoncpp/src/lib_json/json_internalarray.inl
        rapidjson/thirdparty/jsoncpp/src/lib_json/json_internalmap.inl
        rapidjson/thirdparty/jsoncpp/src/lib_json/json_reader.cpp
        rapidjson/thirdparty/jsoncpp/src/lib_json/json_value.cpp
        rapidjson/thirdparty/jsoncpp/src/lib_json/json_valueiterator.inl
        rapidjson/thirdparty/jsoncpp/src/lib_json/json_writer.cpp
        rapidjson/thirdparty/jsoncpp/src/lib_json/sconscript
        rapidjson/thirdparty/jsoncpp/src/test_lib_json/jsontest.cpp
        rapidjson/thirdparty/jsoncpp/src/test_lib_json/jsontest.h
        rapidjson/thirdparty/jsoncpp/src/test_lib_json/main.cpp
        rapidjson/thirdparty/jsoncpp/src/test_lib_json/sconscript
        rapidjson/thirdparty/jsoncpp/AUTHORS
        rapidjson/thirdparty/jsoncpp/LICENSE
        rapidjson/thirdparty/jsoncpp/README.txt
        rapidjson/thirdparty/jsoncpp/version
        rapidjson/thirdparty/ultrajson/README
        rapidjson/thirdparty/ultrajson/ultrajson.h
        rapidjson/thirdparty/ultrajson/ultrajsondec.c
        rapidjson/thirdparty/ultrajson/ultrajsonenc.c
        rapidjson/thirdparty/yajl/include/yajl/yajl_common.h
        rapidjson/thirdparty/yajl/include/yajl/yajl_gen.h
        rapidjson/thirdparty/yajl/include/yajl/yajl_parse.h
        rapidjson/thirdparty/yajl/include/yajl/yajl_tree.h
        rapidjson/thirdparty/yajl/include/yajl/yajl_version.h
        rapidjson/thirdparty/yajl/src/api/yajl_common.h
        rapidjson/thirdparty/yajl/src/api/yajl_gen.h
        rapidjson/thirdparty/yajl/src/api/yajl_parse.h
        rapidjson/thirdparty/yajl/src/api/yajl_tree.h
        rapidjson/thirdparty/yajl/src/api/yajl_version.h.cmake
        rapidjson/thirdparty/yajl/src/CMakeLists.txt
        rapidjson/thirdparty/yajl/src/yajl
        rapidjson/thirdparty/yajl/src/yajl.c
        rapidjson/thirdparty/yajl/src/YAJL.dxy
        rapidjson/thirdparty/yajl/src/yajl_alloc.c
        rapidjson/thirdparty/yajl/src/yajl_alloc.h
        rapidjson/thirdparty/yajl/src/yajl_buf.c
        rapidjson/thirdparty/yajl/src/yajl_buf.h
        rapidjson/thirdparty/yajl/src/yajl_bytestack.h
        rapidjson/thirdparty/yajl/src/yajl_encode.c
        rapidjson/thirdparty/yajl/src/yajl_encode.h
        rapidjson/thirdparty/yajl/src/yajl_gen.c
        rapidjson/thirdparty/yajl/src/yajl_lex.c
        rapidjson/thirdparty/yajl/src/yajl_lex.h
        rapidjson/thirdparty/yajl/src/yajl_parser.c
        rapidjson/thirdparty/yajl/src/yajl_parser.h
        rapidjson/thirdparty/yajl/src/yajl_tree.c
        rapidjson/thirdparty/yajl/src/yajl_version.c
        rapidjson/thirdparty/yajl/ChangeLog
        rapidjson/thirdparty/yajl/COPYING
        rapidjson/thirdparty/yajl/README
        rapidjson/thirdparty/yajl/TODO
        rapidjson/.gitmodules
        rapidjson/.travis.yml
        rapidjson/license.txt
        rapidjson/readme.md
        UVCCamera/pipeline/AbstractBufferedPipeline.cpp
        UVCCamera/pipeline/AbstractBufferedPipeline.h
        UVCCamera/pipeline/CallbackPipeline.cpp
        UVCCamera/pipeline/CallbackPipeline.h
        UVCCamera/pipeline/CaptureBasePipeline.cpp
        UVCCamera/pipeline/CaptureBasePipeline.h
        UVCCamera/pipeline/ConvertPipeline.cpp
        UVCCamera/pipeline/ConvertPipeline.h
        UVCCamera/pipeline/DistributePipeline.cpp
        UVCCamera/pipeline/DistributePipeline.h
        UVCCamera/pipeline/IPipeline.cpp
        UVCCamera/pipeline/IPipeline.h
        UVCCamera/pipeline/pipeline_helper.cpp
        UVCCamera/pipeline/pipeline_helper.h
        UVCCamera/pipeline/PreviewPipeline.cpp
        UVCCamera/pipeline/PreviewPipeline.h
        UVCCamera/pipeline/PublisherPipeline.cpp
        UVCCamera/pipeline/PublisherPipeline.h
        UVCCamera/pipeline/SimpleBufferedPipeline.cpp
        UVCCamera/pipeline/SimpleBufferedPipeline.h
        UVCCamera/pipeline/SQLiteBufferedPipeline.cpp
        UVCCamera/pipeline/SQLiteBufferedPipeline.h
        UVCCamera/_onload.cpp
        UVCCamera/_onload.h
        UVCCamera/Android.mk
        UVCCamera/libUVCCamera.h
        UVCCamera/objectarray.h
        UVCCamera/Parameters.cpp
        UVCCamera/Parameters.h
        UVCCamera/serenegiant_usb_UVCCamera.cpp
        UVCCamera/utilbase.cpp
        UVCCamera/UVCButtonCallback.cpp
        UVCCamera/UVCButtonCallback.h
        UVCCamera/UVCCamera.cpp
        UVCCamera/UVCCamera.h
        UVCCamera/UVCPreview.cpp
        UVCCamera/UVCPreview.h
        UVCCamera/UVCStatusCallback.cpp
        UVCCamera/UVCStatusCallback.h
        Android.mk
        Application.mk
        localdefines.h
        utilbase.h)

add_executable(jni ${SOURCE_FILES})